--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,9 +1,27 @@
+@import "var.css";
 @import "ant-design-vue/dist/reset.css";
-
-.ant-btn {
-    border-radius: 0;
-}
 
 #app {
     height: 100%;
+}
+
+ul {
+    list-style: none;
+}
+
+.block-hover {
+    display: flex;
+    height: 100%;
+    cursor: pointer;
+    align-items: center;
+    padding: 0 12px;
+    transition: .2s;
+}
+
+.block-hover:hover {
+    background-color: #f5f5f5;
+}
+
+.ant-btn-circle {
+    border-color: rgb(240, 240, 240);
 }
